:bug: Fix layout overflow x

--- a/frontend/src/components/layouts/Layout.module.scss
+++ b/frontend/src/components/layouts/Layout.module.scss
@@ -1,14 +1,13 @@
 .home,
 .public {
-    width: 100vw;
+    width: 100%;
     height: 100%;
     display: grid;
     box-sizing: border-box;
-    overflow-x: hidden;
 }
 
 .home {
-    grid-template-rows: auto auto 1fr auto;
+    grid-template-rows: auto 1fr 1fr;
 }
 
 .public {
